# kasa-monitor

./: .gitignore  Dockerfile  const.py  docker-compose.yml  kasa-monitor.conf  main.py  output_example.json  pyproject.toml  requirements.txt
mqtt2db/: .env.example  alembic-init.sh  app.py  data_models.py  db_models.py  mqtt2db.conf  pyproject.toml  requirements.txt
