[tool.poetry]
name = "mqtt2db"
version = "0.1.0"
description = ""
authors = ["c8763yee <rrrrr4413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
greenlet = "3.0.3"
mako = "1.3.2"
markupsafe = "2.1.5"
mysqlclient = "2.2.4"
paho-mqtt = "2.0.0"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.28"
typing-extensions = "4.10.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
